FellowStudents/Rama/catkin_ws/log/build_2023-06-13_13-14-00/nodes/stderr.log
  File "/home/rama/catkin_ws/install/nodes/lib/python3.8/site-packages/nodes/obstacle_avoidance.py", line 95
    else if CHANGE_DIRECTION == "LEFT":
         ^
SyntaxError: invalid syntax

